# loteria_cli

./: Cargo.toml  lolp  options.txt  p.py  test.lua
src/: cli.rs  config.rs  error.rs  gui.rs  installer.rs  log.rs  main.rs  updater.rs  utils.rs
src/cli/: mod.rs
