[package]
name = "loteria_cli"
version = "0.2.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
image = "0.24.7"
anyhow = "1.0.81"
thiserror = "1.0.58"
reqwest = "*" # gonna decide later
egui = "0.28.1"
eframe = "0.28.1"
rfd = "0.14.1"

[dependencies.loteria_engine]
path = "../loteria_engine"

[dependencies.clap]
version = "4.0.0"
features = ["derive"]
